Possible compatibility problems with earlier versions marked with '*'.

--- 2.0.22 2004/08/06

Add support for more "commit changes" in ZOOM (uses Extended Services).

For yaz-client, command set_marcdump <file> / -m <file> dumps SUTRS/XML/..
records as well.

Yet another small fix for configure of SSL.

--- 2.0.21 2004/05/14

Fix SSL libs for configure when --with-openssl=DIR is given.  

--- 2.0.20 2004/05/10

Add autoconf m4 macro YAZ_DOC for YAZ documentation setup (docbook).

SSL comstack now uses yaz.pem certificate file on server side
by default. Certificate filename can be configured by calling
comstack function cs_set_ssl_certificate_file before cs_bind is used.

Fix bug regarding multiple calls to ZOOM_connection_connect.

Implement cs_set_ssl_ctx which sets SSL_CTX for SSL comstack.

Do not create SSL_CTX in cs_create (ssl_type). Create in tcpip_bind,
tcpip_rcvconnect instead. This allows user to set custom SSL_CTX.

ZOOM now allows inspection of X509 peer certificate for verification.
The X509 buffer is retrived by reading ZOOM option "sslPeerCert".

Removed libyazssl.la. When SSL is enabled, libyaz.la has SSL support and
all programs have too (yaz-ztest, yaz-client, zoom..). May not be
as "modular" but it simplifies things.

Added cs_get_peer_certificate to that returns peer X509 PEM.

Added cs_get_ssl that returns SSL handle (SSL *) for SSL comstack; returns
NULL if SSL is unavailable.

Documentation about MARC decoding tools.

Fix --disable-tcpd to really disable tcpd. Patch by Robin H. Johnson.

--- 2.0.19 2004/03/30

Rename CHANGELOG to NEWS to follow GNU style packing.

Fix bug with missing initialization of member in init_diagnostics.
This bug affects threaded version of GFS server.

--- 2.0.18 2004/03/20

Use wrbuf_xmlputs_n instead of wrbuf_write_cdata to avoid clash with
Zebra symbol.

Ensure zlib.dll is packed with Windows install.

--- 2.0.17 2004/03/17

Fix encoding of xsd:string to use text instead of CDATA.
